# core-claude-cowork-max-plugin

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_TEMPLATE.md
.claude-plugin/: plugin.json
.github/workflows/: release.yml
connectors/: calendar.md  drive.md  linear.md  slack.md
docs/: build-spec.md  cowork-recommendations.md
hooks/: hooks.json
live-artifacts/: cdn-checksums.txt  core-dashboard.html  dm-workshop.html  onboarding-wizard.html  swarm-live-view.html  trust-strip-dashboard.html
live-artifacts/shared/: helpers.js  styles.css  workshop-animations.css  workshop-states.js
mcp-server/: README.md  pyproject.toml
mcp-server-node/: README.md  package.json  server.mjs  test-swarm-status.mjs  test-vibe-log.mjs  test-workshop-state.mjs
mcp-server/core_mcp/: __init__.py  server.py
mcp-server/core_mcp/tools/: __init__.py  list_workspaces.py  read_convergence_trajectory.py  read_dm_profile.py  read_persuasion_log.py  read_project_md.py  read_swarm_topology.py  read_vibe_log.py  read_workshop_state.py
scripts/: core-helpers.sh  core_helpers.py  mcp-server-install.cmd  mcp-server-install.sh  mcp_server_install.py  permission-request.cmd  permission-request.sh  permission_request.py  refresh-bundled-skills.cmd  refresh-bundled-skills.sh  refresh_bundled_skills.py  session-end.cmd  session-end.sh  session-start.cmd  session-start.sh  session_end.py  session_start.py  test_permission_request.py
scripts/ci/: check-inline-scripts.py  check-svg-security.py  validate-connectors.py  validate-manifests.py  (+2 more)
skills/: CHECKSUMS.txt
(+42 files in other folders)
